feat: implemented get related marketers endpoint
